tree-sitter-boreal/test/corpus/case_expression.txt
================================================================================
Case Expressions
================================================================================

module Expressions where

expr x =
  case x of
    | True -> False
    | False -> True
--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (function_declaration
      (function_head
        (identifier)
        (identifier))
      (function_body
        (expression
          (case_expression
            (simple_expression
              (identifier))
            (alternatives
              (alternative
                (pattern
                  (constructor))
                (simple_expression
                  (constructor)))
              (alternative
                (pattern
                  (constructor))
                (simple_expression
                  (constructor))))))))))
